# mafia

./: .env_template  .gitignore  Dockerfile  Dockerfile.bot  Dockerfile.faststream  README.md  docker-compose.yml  keyboards.py  keys.py  main.py  play.py  pyproject.toml  requirements.txt  router.py  settings.py  states.py  tasks.py
bot/: main.py
bot/ai/: client.py  configure.py
bot/alembic/: env.py
bot/alembic/versions/: 2025_03_19_1606-61bfb0d47655_initial_revision.py  2025_03_19_1642-6d3ab1e04e7a_initial_revision.py  2025_03_19_1649-7649176d8eb4_.py  2025_03_19_1659-d39abc03bd7b_.py  2025_03_19_1711-4778e63f5b41_.py  2025_03_19_1736-a666c384186c_.py  (+28 more)
bot/broker/: tasks.py
bot/cache/: cache_types.py  extra.py  keys.py  protocols.py  roleses.py
bot/constants/: output.py
bot/database/: __init__.py  groupings.py  roles.py
bot/general/: assets.py  collection_of_roles.py  commands.py  config.py  exceptions.py  groupings.py  launch.py  log.py  players.py  resources.py  text.py
bot/mafia/: controlling_game.py  pipeline_game.py
bot/middlewares/: db.py  errors.py  time_limits.py
bot/routers/: __init__.py  game.py  users.py
bot/scheduler/: game.py
bot/services/: actions_at_night.py  base.py  mailing.py  pipeline_game.py  play.py  processing.py  registartion.py
bot/states/: game.py  settings.py  states.py
bot/tasks/: dependencies.py  game.py  tasks.py
bot/utils/: calculator.py  common.py  informing.py  live_players.py  play.py  pretty_text.py  roles.py  scheduler.py  sorting.py  state.py  tg.py  utils.py  validators.py
docs/: detailed-readme.md
(+278 files in other folders)
